# litex-picorv32-rtthread

./: .gitignore  README.md  pyproject.toml
app/.cargo/: config
demo/: .gitignore  Makefile  demo.elf  interrupt_gcc.S  irq_handler.c  irq_handler.h  linker.ld  main.c  main.d  start.S  start.d
demo/picorv32/: crt0.S  crt0.d  custom_ops.d
firmware/: crt0.d  donut.d  helloc.d  main.d
icesugar-pac/: icesugar.svd
icesugar-pac/src/: lib.rs
rtthread-nano/: CMakeLists.txt  Makefile  rtconfig.h
rtthread-nano/applications/: main.c
rtthread-nano/drivers/: board.c
rtthread-nano/drivers/linker_scripts/: link.lds
rtthread-nano/libraries/: start.S
rtthread-nano/libraries/picorv32/: README.md  irq.h
rtthread-nano/rt-thread/components/finsh/: shell.c
rtthread-nano/rt-thread/libcpu/risc-v/picorv32/: context_gcc.S  cpuport.c  interrupt.c  interrupt_gcc.S
rtthread-nano/rt-thread/src/: clock.c  components.c  thread.c  timer.c
soc/targets/: muselab_icesugar.py
